--- a/CaixaEletronico/CaixaEletronico.qsf
+++ b/CaixaEletronico/CaixaEletronico.qsf
@@ -71,4 +71,6 @@ set_global_assignment -name VHDL_FILE CaixaEletronico.vhd
 set_global_assignment -name VHDL_FILE tb_CaixaEletronico.vhd
 set_global_assignment -name VHDL_FILE Memoria.vhd
 set_global_assignment -name VHDL_FILE cadastro.vhd
+set_global_assignment -name NUM_PARALLEL_PROCESSORS 10
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
